# rugby-possession-value

./: .coverage  .gitignore  CITATION.cff  CONTRIBUTING.md  MODEL_CARD.md  NOTICE  README.md  pyproject.toml  references.bib
.github/workflows/: build-model.yml  ci.yml  generate-real-epv-heatmap.yml
artifacts/: epv_heatmap_metadata.json  epv_heatmap_real.csv  epv_state_values_real.csv
docs/en/: DATA.md  METHODOLOGY.md  README.md
docs/ja/: DATA.md  METHODOLOGY.md  README.md  STUDENT_TABLE.md
examples/: query_model.py
scripts/: build_public_model.sh  generate_real_epv_heatmap.py
src/rugby_value/: __init__.py  bootstrap.py  cli.py  datasets.py  epa.py  model.py  outputs.py  preprocess.py  schema.py  validation.py
tests/: test_epa.py  test_model.py  test_preprocess.py  test_validation.py
tests/fixtures/: phases.csv
